modified:   app/Helpers/General.php 	modified:   app/Http/Controllers/Api/V1/CategoryFreeCourse.php 	new file:   app/Http/Resources/CategoryFreeCourseResource.php 	new file:   app/Livewire/Dashboard/FreeCourse/Category/CategoryFreeCourse.php 	new file:   app/Livewire/Dashboard/FreeCourse/Category/NewCategory.php 	deleted:    app/Livewire/Dashboard/FreeCourse/CategoryFreeCourse.php 	modified:   app/Models/CategoryFCourse.php 	modified:   app/Repository/DBCategoryFreeCourseRepository.php 	modified:   app/Repositoryinterface/CategoryFreeCourseRepositoryinterface.php 	modified:   app/Traits/UUID.php 	modified:   composer.json 	modified:   composer.lock 	modified:   lang/ar/tran.php 	modified:   public/app-assets/css/cust.css 	modified:   public/app-assets/custom-rtl.min.css 	new file:   public/asset/css-ltr/bootstrap-extended.css 	new file:   public/asset/css-ltr/bootstrap-extended.min.css 	new file:   public/asset/css-ltr/bootstrap.css 	new file:   public/asset/css-ltr/bootstrap.min.css 	new file:   public/asset/css-ltr/colors.css 	new file:   public/asset/css-ltr/colors.min.css 	new file:   public/asset/css-ltr/components.css 	new file:   public/asset/css-ltr/components.min.css 	new file:   public/asset/css-ltr/core/colors/palette-gradient.css 	new file:   public/asset/css-ltr/core/colors/palette-gradient.min.css 	new file:   public/asset/css-ltr/core/colors/palette-noui.css 	new file:   public/asset/css-ltr/core/colors/palette-noui.min.css 	new file:   public/asset/css-ltr/core/colors/palette-variables.css 	new file:   public/asset/css-ltr/core/colors/palette-variables.min.css 	new file:   public/asset/css-ltr/core/menu/menu-types/horizontal-menu.css 	new file:   public/asset/css-ltr/core/menu/menu-types/horizontal-menu.min.css 	new file:   public/asset/css-ltr/core/menu/menu-types/vertical-menu.css 	new file:   public/asset/css-ltr/core/menu/menu-types/vertical-menu.min.css 	new file:   public/asset/css-ltr/core/menu/menu-types/vertical-overlay-menu.css 	new file:  

--- a/public/app-assets/css/cust.css
+++ b/public/app-assets/css/cust.css
@@ -79,16 +79,16 @@
     overflow: hidden !important;
 }
 
-.btn-primary {
+/* .btn-primary {
     color: #fff;
     background-color: #0084CE;
     border-color: #0084CE;
-}
+} */
 
-.btn-primary:hover,
+/* .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary:active {
     color: #fff;
     background-color: #0e7bb8 !important;
     border-color: #0e7bb8 !important;
-}
+} */
